tests/urmoac/errors/net_issues/edge_length_0_multiple_log/options.urmoac
--net-errors-output net_errors.txt
